# CCui

./: .ccui-startup-status  .env.example  .gitignore  CCui-DeepSeek.bat  LICENSE  README.md  bunfig.toml  package.json  start-gui.bat  start-print.bat  start.bat  tsconfig.json  启动.bat
.claude/: ccui-project-graph.json
.cursor/: mcp.json
crates/ccui-indexer/: Cargo.toml
crates/ccui-indexer/src/: main.rs
docs/: AGENT_MODEL.md  ARCHITECTURE.md  AUDIT.md  CCUI_STACK.md  COMPETITOR_BENCHMARK.md  DEV.md  GUI_PLAN.md  HARNESS_RESEARCH.md  MODULES.md  PACK_SPEC.md  PRD.md  PRODUCT_DESIGN.md  REPLICATION_REPORT.md  TRUST_LOOP_PLAN.md
gui/: diag-log.js  index.html  main.js  package-lock.json  package.json  preload.js  projects-store.js  renderer.js  review.html  review.js  style.css
scripts/: bootstrap-deps.ts  build-catalog-packs.ts  build-indexer.ts  build.ts  capture-proxy.ts  chat-e2e.mjs  deepseek-ask.ts  dev.ts  generate-sdk-types.ts  gui-headless-demo.ts  loadEnv.ts  mcp-codegraph.bat  mcp-codegraph.ts  pack-export.ts  probe-plugin-discovery.ts  probe-recall.ts  run-deepseek.ts  seed-ccui-skills.ts  seed-dev.ts  setup-ready.ps1  simulate-human.ps1  smoke-test.ts  snap-gui.mjs  start-terminal.ps1  start.ps1  startup-progress.ts  test-console-protocol.ts  test-contract.ts  test-daemon-errors.ts  test-daemon.ts  test-gate.ts  test-instances.ts  test-model-router.ts  test-pack-catalog.ts  test-pack-export.ts  test-pack-service.ts  test-plugin-sdk.ts  test-project-profile.ts  test-protocol.ts  test-runtime-projection.ts  (+5 more)
src/: QueryEngine.ts  README.md  Task.ts  (+16 more)
(+254 files in other folders)
