[package]
name = "ccui-indexer"
version = "0.1.0"
edition = "2021"
description = "CCui project graph indexer — fast parallel FS walk + import extraction, emits ProjectGraph JSON on stdout."

[[bin]]
name = "ccui-indexer"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
